--- a/MosquittoChat/MosquittoChat/ChatWindow.xaml
+++ b/MosquittoChat/MosquittoChat/ChatWindow.xaml
@@ -6,13 +6,24 @@
         xmlns:local="clr-namespace:MosquittoChat"
         mc:Ignorable="d"
         Title="ChatWindow" Height="450" Width="800"
-        Closing="mainWindowClosing">
+        Closing="mainWindowClosing" MinWidth="400" MinHeight="300">
     <Grid>
-        <TextBox x:Name="topic_textbox" HorizontalAlignment="Left" Margin="209,163,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="msg_textbox" HorizontalAlignment="Left" Margin="416,172,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Topic" HorizontalAlignment="Left" Margin="254,138,0,0" VerticalAlignment="Top"/>
-        <Label Content="Message" HorizontalAlignment="Left" Margin="463,151,0,0" VerticalAlignment="Top"/>
-        <Button Click="publishButtonClick" x:Name="Publish_button" Content="Publish" HorizontalAlignment="Left" Margin="428,244,0,0" VerticalAlignment="Top"/>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="90"/>
+            <RowDefinition Height="339*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="140"/>
+            <ColumnDefinition Width="161*"/>
+        </Grid.ColumnDefinitions>
+        <TextBox x:Name="msg_textbox" Margin="10,0,54,10" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Bottom" Grid.Column="1" Height="20" Grid.Row="1"/>
+        <TextBox x:Name="topicAddTextbox" HorizontalAlignment="Left" Margin="10,0,0,10" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="120" Height="18" Grid.Row="1"/>
+        <Label Content="Add Topic" HorizontalAlignment="Center" Margin="0,0,0,28" VerticalAlignment="Bottom" Height="26" Grid.Row="1"/>
+        <Button Click="publishButtonClick" x:Name="Publish_button" Content="Publish" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Background="White" Grid.Column="1" Height="20" Width="44" Grid.Row="1"/>
+        <Label x:Name="usersLabel" Content="Subscribed Topics" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.198,-0.107" Height="26" Grid.Row="1"/>
+        <Image Margin="10,10,10,10" Stretch="Fill" Source="/Images/MosquittoChatLogoTransparent.png"/>
+        <ListBox x:Name="chatBoxList" Grid.Column="1" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,10,10,35" Grid.RowSpan="2"/>
+        <ListBox x:Name="subscribedTopicsList" Grid.Row="1" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,26,10,54"/>
 
     </Grid>
 </Window>
