--- a/MosquittoChat/MosquittoChat/ChatWindow.xaml
+++ b/MosquittoChat/MosquittoChat/ChatWindow.xaml
@@ -16,14 +16,15 @@
             <ColumnDefinition Width="140"/>
             <ColumnDefinition Width="161*"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="msg_textbox" Margin="10,0,54,10" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Bottom" Grid.Column="1" Height="20" Grid.Row="1"/>
-        <TextBox x:Name="topicAddTextbox" HorizontalAlignment="Left" Margin="10,0,0,10" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="120" Height="18" Grid.Row="1"/>
+        <TextBox x:Name="msg_textbox" Margin="10,0,58,10" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Bottom" Grid.Column="1" Height="20" Grid.Row="1"
+                 KeyDown="msg_textbox_KeyDown"/>
+        <TextBox x:Name="topicAddTextbox" HorizontalAlignment="Left" Margin="10,0,0,10" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="120" Height="18" Grid.Row="1"
+                 KeyDown="topicAddTextbox_KeyDown"/>
         <Label Content="Add Topic" HorizontalAlignment="Center" Margin="0,0,0,28" VerticalAlignment="Bottom" Height="26" Grid.Row="1"/>
         <Button Click="publishButtonClick" x:Name="Publish_button" Content="Publish" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Background="White" Grid.Column="1" Height="20" Width="44" Grid.Row="1"/>
         <Label x:Name="usersLabel" Content="Subscribed Topics" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.198,-0.107" Height="26" Grid.Row="1"/>
         <Image Margin="10,10,10,10" Stretch="Fill" Source="/Images/MosquittoChatLogoTransparent.png"/>
-        <ListBox x:Name="chatBoxList" Grid.Column="1" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,10,10,35" Grid.RowSpan="2"/>
-        <ListBox x:Name="subscribedTopicsList" Grid.Row="1" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="10,26,10,54"/>
-
+        <ListBox x:Name="chatBoxList" Grid.Column="1" Margin="10,10,10,35" Grid.RowSpan="2"/>
+        <ListBox x:Name="subscribedTopicsList" Grid.Row="1" Margin="10,26,10,54"/>
     </Grid>
 </Window>
