--- a/MosquittoChat/MosquittoChat/ChatWindow.xaml
+++ b/MosquittoChat/MosquittoChat/ChatWindow.xaml
@@ -6,25 +6,33 @@
         xmlns:local="clr-namespace:MosquittoChat"
         mc:Ignorable="d"
         Title="ChatWindow" Height="450" Width="800"
-        Closing="mainWindowClosing" MinWidth="400" MinHeight="300">
+        Closing="MainWindowClosing" MinWidth="400" MinHeight="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="90"/>
-            <RowDefinition Height="339*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="140"/>
-            <ColumnDefinition Width="161*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <TextBox x:Name="msg_textbox" Margin="10,0,58,10" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Bottom" Grid.Column="1" Height="20" Grid.Row="1"
+        <TextBox x:Name="msg_textbox" Margin="10,0,58,10" TextWrapping="Wrap" Text="" VerticalAlignment="Bottom" Grid.Column="1" Height="20" Grid.Row="1"
                  KeyDown="msg_textbox_KeyDown"/>
-        <TextBox x:Name="topicAddTextbox" HorizontalAlignment="Left" Margin="10,0,0,10" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="120" Height="18" Grid.Row="1"
-                 KeyDown="topicAddTextbox_KeyDown"/>
+        <TextBox x:Name="topicAddTextbox" Margin="10,0,10,10" TextWrapping="Wrap" VerticalAlignment="Bottom" Height="18" Grid.Column="0" Grid.Row="1"
+                 KeyDown="TopicAddTextbox_KeyDown"/>
         <Label Content="Add Topic" HorizontalAlignment="Center" Margin="0,0,0,28" VerticalAlignment="Bottom" Height="26" Grid.Row="1"/>
-        <Button Click="publishButtonClick" x:Name="Publish_button" Content="Publish" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Background="White" Grid.Column="1" Height="20" Width="44" Grid.Row="1"/>
+        <Button Click="PublishButtonClick" x:Name="Publish_button" Content="Publish" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Background="White" Grid.Column="1" Height="20" Width="44" Grid.Row="1"/>
         <Label x:Name="usersLabel" Content="Subscribed Topics" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.198,-0.107" Height="26" Grid.Row="1"/>
-        <Image Margin="10,10,10,10" Stretch="Fill" Source="/Images/MosquittoChatLogoTransparent.png"/>
-        <ListBox x:Name="chatBoxList" Grid.Column="1" Margin="10,10,10,35" Grid.RowSpan="2"/>
-        <ListBox x:Name="subscribedTopicsList" Grid.Row="1" Margin="10,26,10,54"/>
+        <Image Margin="10,10,10,10" Stretch="Uniform" Source="/Images/MosquittoChatLogoTransparent.png"/>
+        <ListBox x:Name="messageViewListBox" Grid.Column="1" Margin="10,10,10,35" Grid.RowSpan="2">
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="{x:Type ListBoxItem}">
+                    <Setter Property="Focusable" Value="False"/>
+                    <Setter Property="IsHitTestVisible" Value="False" />
+                </Style>
+            </ListBox.ItemContainerStyle>
+        </ListBox>
+        <ListBox PreviewMouseDown="subscribedTopicsListBox_PreviewMouseDown" x:Name="subscribedTopicsListBox" Grid.Row="1" Margin="10,26,10,54"/>
+        <GridSplitter Grid.Column="1" HorizontalAlignment="Left" Height="100" Margin="0,45,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="5"/>
     </Grid>
 </Window>
