--- a/MosquittoChat/MosquittoChat/ChatWindow.xaml
+++ b/MosquittoChat/MosquittoChat/ChatWindow.xaml
@@ -5,8 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:MosquittoChat"
         mc:Ignorable="d"
-        Title="ChatWindow" Height="450" Width="800"
-        Closing="MainWindowClosing" MinWidth="400" MinHeight="300">
+        Title="Mosquitto Chat" Icon="/Images/MosquittoChatLogoTransparent.png"
+        Height="450" Width="800"
+        MinWidth="400" MinHeight="300"
+        Loaded="Window_Loaded"
+        Closing="MainWindowClosing">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="90"/>
@@ -32,7 +35,7 @@
                 </Style>
             </ListBox.ItemContainerStyle>
         </ListBox>
-        <ListBox PreviewMouseDown="subscribedTopicsListBox_PreviewMouseDown" x:Name="subscribedTopicsListBox" Grid.Row="1" Margin="10,26,10,54"/>
-        <GridSplitter Grid.Column="1" HorizontalAlignment="Left" Height="100" Margin="0,45,0,0" Grid.RowSpan="2" VerticalAlignment="Top" Width="5"/>
+        <ListBox SelectionChanged="subscribedTopicsListBox_SelectionChanged" x:Name="subscribedTopicsListBox" Grid.Row="1" Margin="10,26,10,54"/>
+        <GridSplitter Grid.Column="1" HorizontalAlignment="Left" Margin="0,10,0,10" Grid.RowSpan="2" Width="2"/>
     </Grid>
 </Window>
